# gen_id_allocator

./: Cargo.toml
benches/: id_types.rs
src/: alloc_gen.rs  allocator.rs  gen.rs  id.rs  lib.rs  packed_id.rs  range.rs  traits.rs  valid.rs
