[package]
name = "gen_id_allocator"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
force_derive = { git = "https://github.com/frsrblch/force_derive" }
iter_context = { git = "https://github.com/frsrblch/iter_context" }
nonmax = "0.5.0"
fnv = "1.0"
static_assertions = "1.1"
ref-cast = "1.0.6"

[dev-dependencies]
criterion = "*"
fnv = "1.0.7"
ahash = "0.7.4"

[features]
assert_valid = []
id_creation = []

[[bench]]
name = "id_types"
harness = false